# f401_motorizer

./: .mxproject  CMakeLists.txt  Makefile  README.md  compile_flags.txt  f401_motorizer.ioc
Core/Inc/: stm32f4xx_it.h
Core/Inc/adapters/: delay.h  irq.h  time_src.h  uart_comp.h
Core/Inc/modules/: circ_buf.h  circ_dbuf.h  consts.h  controllable.h  crc8.h  drv_starter.h  kalman.h  motor_action.h  pid.h  remote.h  rpm_measurer.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Core/Src/adapters/: delay.c  irq.c  time_src.c  uart_comp.c
Core/Src/modules/: circ_buf.c  circ_dbuf.c  controllable.c  crc8.c  drv_starter.c  kalman.c  motor_action.c  pid.c  remote.c  rpm_measurer.c
USB_DEVICE/App/: usbd_cdc_if.c
os_client/: CMakeLists.txt  serial.c
tests/: CMakeLists.txt  main.cpp
tests/fakes/hal/: stm32f4xx_hal.h
tests/src/: CMakeLists.txt  calculate_rpm_tests.cpp  circ_buf_tests.cpp  drv_starter_tests.cpp  emu.cpp  emu.h  motor_action_tests.cpp  pid_tests.cpp  remote_tests.cpp  utils.cpp
tests/src/adapters/: delay.c  irq.c  time_src.c  uart_comp.c
